Fixed text alignment.

--- a/projects/bible-query/styles/style.css
+++ b/projects/bible-query/styles/style.css
@@ -38,13 +38,19 @@
   color: white;
 }
 
+p,
+.settings__content,
+h2 {
+  text-align: left;
+}
+
 body {
   font-family: "Segoe UI", Arial, Helvetica, sans-serif;
   font-size: 1rem;
   font-weight: 400;
   line-height: 1.5;
   color: white;
-  text-align: left;
+  text-align: center;
   margin: 0;
   overflow: hidden;
 }
@@ -62,20 +68,24 @@ body {
   overflow: auto;
 }
 
+p,
+.page__sub-heading,
+input {
+  margin: 0.50rem 0.75rem;
+}
+
 p {
   font-size: 1rem;
-  margin: 0 0.75rem;
 }
 h1 {
   margin-top: 0;
 }
 input {
-  width: 1rem;
-  height: 1rem;
-  margin-left: 0.75rem;
+  width: 2rem;
+  height: 2rem;
 }
 label {
-  font-size: 1.25rem;
+  font-size: 2.25rem;
 }
 img {
   text-decoration: none;
@@ -88,21 +98,17 @@ a {
 .bible-query__title {
   font-size: 2.5rem;
   margin: 0.4rem 0;
-  text-align: center;
 }
 .page__heading {
   font-size: 2rem;
   margin-bottom: 0.5rem;
-  text-align: center;
 }
 #stars {
   font-size: 1.2rem;
   margin: 0;
-  text-align: center;
 }
 .page__sub-heading {
   font-size: 1.3rem;
-  margin-left: 0.5rem;
 }
 
 .levels__number,
@@ -119,7 +125,6 @@ a {
 .levels__number {
   border-color: lightgrey;
   margin: 1.5rem;
-  text-align: center;
 }
 #query__clue-btn {
   border-color: #cf1b1b;
@@ -140,7 +145,7 @@ a {
 }
 
 /* -------------------QUERY---------------- */
-#query {
+#query p {
   text-align: center;
 }
 #query__level-theme {
@@ -225,7 +230,7 @@ a {
   border-radius: 40%;
 }
 
-#final-score {
+#final-score p {
   text-align: center;
 }
 
@@ -247,7 +252,6 @@ a {
 }
 
 .rules-table__img {
-  position: absolute;
   margin: 1rem;
   width: 90%;
 }
@@ -345,11 +349,11 @@ img:active {
 
 .modal__content {
   padding: 3rem 1rem 1rem;
-  text-align: center;
 }
 .modal__content,
 #clue__source-content {
   font-size: 1.3rem;
+  text-align: center;
 }
 #clue__source-content {
   text-align: left;
@@ -366,7 +370,6 @@ img:active {
   box-shadow: 0 4px 8px 0 #00000033, 0 6px 20px 0 #00000030;
   animation-name: zoomIn;
   animation-duration: 0.1s;
-  text-align: center;
 }
 .reset-game-modal__effect {
   background-color: #ffa3a3;
@@ -376,7 +379,6 @@ img:active {
   font-weight: bold;
   font-size: 1.2rem;
   padding: 3rem 1rem 1rem;
-  text-align: center;
 }
 
 /* ----------NO Scrollbar---------- */
